Update schema to return user details on creation
